# Simulator-STM32

./: .gitignore  ACTION_PLAN.md  AUDIT_REPORT.md  CHEATSHEET.md  CMakeLists.txt  C_GO_COMPATIBILITY.md  DEMO_INSTRUCTIONS.md  Dockerfile  GETTING_STARTED.md  IMPLEMENTATION_SUMMARY.md  README.md  RUN_TESTS_MANUAL.md  TEST_GUIDE.md  create_test_bin.py  demo_programs.py  demo_timer.cubescript  quick_test.ps1  quick_test.sh  run_all_tests.ps1  run_all_tests.sh  run_demo.ps1  run_demo.sh  run_tests.ps1  run_tests.sh  test_task.json
core/: main.c
core/include/: bus_matrix.h  cube_script.h  dma.h  execute.h  i2c.h  memory.h  nvic.h  nvic_extended.h  rcc.h  spi.h  tim6.h  usart.h  vcd_trace.h
core/src/: bus_matrix.c  cube_script.c  dma.c  execute.c  execute.c.new  gpio.c  i2c.c  memory.c  nvic.c  nvic_extended.c  rcc.c  spi.c  tim6.c  usart.c
docs/: instruction_set.md
docs/periphery/timer_modules/: 01_timer_core_model.txt  02_timer_register_interface.txt  03_timer_irq_bridge_nvic.txt  04_cpu_interrupt_dispatcher_no_nesting.txt  05_firmware_contract_and_isr_behavior.txt  06_waveform_tracing_gtkwave.txt
knowledge-base/: README.md  glossary.md
knowledge-base/architecture/: cpu_core.md  data_flow.md  gpio.md  interrupt_controller.md  memory_model.md  microservice.md  overall_architecture.md  timer.md  uart.md
knowledge-base/decisions/: README.md
knowledge-base/implementation/: instruction_decoder.md  instruction_execution.md  memory_access.md  microservice_logic.md  peripherals_implementation.md  registers.md
knowledge-base/requirements/: functional_requirements.md  non_functional_requirements.md  system_features.md
knowledge-base/tech/: arm_architecture.md  go_microservice.md  keydb.md  stm32_architecture.md
knowledge-base/testing/: integration_tests.md  system_tests.md  test_infrastructure.md  testing_strategy.md  unit_tests.md
orchestrator/: config.yaml  go.mod  main.go
orchestrator/keydb/: client.go
orchestrator/simulator/: runner.go
orchestrator/types/: types.go
test/: test_extended_instructions.c  test_instructions.c  test_integration.c  test_peripheral.c  test_peripheral_extended.c  test_tim6_behavior.c
